# udacity_dend_capstone_project

./: .gitignore  DATA-DICTIONARY.md  README.md  docker-compose.yml  flights_etl.py  pyproject.toml
airflow/dags/: dag.py  flights_etl.py  flights_etl_dag.py
airflow/plugins/helpers/: spark_functions.py
airflow/plugins/operators/: process_airlines.py  process_data_spark.py
docker/: Dockerfile  entrypoint.sh  python_requirements.txt
docker/config/: spark-defaults.conf
spark/app/: process_airline_data.py  process_airport_data.py  process_airports_data.py  process_flights_data.py
