[tool.poetry]
name = "udacity_dend_capstone_project"
version = "0.1.0"
description = ""
authors = ["Fred <fred.mny@gmail.com>"]
readme = "README.md"
packages = [{include = "udacity_dend_capstone_project"}]

[tool.poetry.dependencies]
python = "^3.10"
apache-airflow = "^2.4.3"
psycopg2-binary = "^2.9.5"
pandas = "^1.5.2"
jupyter = "^1.0.0"
pyspark = {extras = ["sql"], version = "^3.3.1"}
plotly = "^5.11.0"
boto3 = "^1.26.32"
apache-airflow-providers-apache-spark = "4.0.0"
apache-airflow-providers-amazon = "6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
